src/test/deca/context/invalid/inst_return_in_void_method_else.deca
// Test la règle 3.24: Pas le droit de return quelque chose alors qu'on attend pas de return
// dans un else

class A  {

    void voidMethod(){
        int x = 12;
        if (false){
            x = 5;
        }
        else{
            return x;
        }
        
    }
}



// Resultat:

//TODOTEST